--- a/blogrep.html
+++ b/blogrep.html
@@ -170,7 +170,7 @@ pre code {
 
 
 <p><em>Research Paper 1:</em></p>
-<p>The first paper titled <strong>“Impact of COVID-19 on RTI, a comparative perspective from India to EU”</strong> delineates the wringing of Right to Information during the COVID-19 pandemic. It delves into the political, social, and economic situation of India and the EU to understand why information asymmetry was so rampant and whether the media was captured by the government (out of fear or bribery) or were the polices such that RTI was given a much lower stance and constantly behind.</p>
+<p>This paper titled <strong>“Impact of COVID-19 on RTI, a comparative perspective from India to EU”</strong> delineates the wringing of Right to Information during the COVID-19 pandemic. It delves into the political, social, and economic situation of India and the EU to understand why information asymmetry was so rampant and whether the media was captured by the government (out of fear or bribery) or were the polices such that RTI was given a much lower stance and constantly behind.</p>
 <p>The full research paper is available for view and download here <a href="https://drive.google.com/file/d/1yLdU4vgox8-lbcMZah_dI2N4zk5x-JMZ/view?usp=sharing">RTI during COVID-19</a></p>
 <hr />
 <p><em>Research Paper 2:</em></p>
