--- a/content/blogs/homework3.html
+++ b/content/blogs/homework3.html
@@ -698,9 +698,10 @@ plot &lt;- brexit %&gt;%
     y = &quot;Leave % in the 2016 Brexit referendum&quot;) +
   NULL
 
-ggsave(file=&#39;brexit_plot.png&#39;, plot=plot, width=14, height=8)
-knitr::include_graphics(&quot;brexit_plot.png&quot;, error=F)</code></pre>
-<p><img src="brexit_plot.png" width="2100" style="display: block; margin: auto;" /></p>
+plot</code></pre>
+<p><img src="/blogs/homework3_files/figure-html/replicate_brexit_plot-1.png" width="648" style="display: block; margin: auto;" /></p>
+<pre class="r"><code>#ggsave(file=&#39;brexit_plot.png&#39;, plot=plot, width=14, height=8)
+#knitr::include_graphics(&quot;brexit_plot.png&quot;, error=F)</code></pre>
 <p>```</p>
 </div>
 <div id="deliverables" class="section level1">
