--- a/content/blogs/Untitledblog.html
+++ b/content/blogs/Untitledblog.html
@@ -8,7 +8,7 @@ draft: false
 image: pic07.jpg
 keywords: ""
 slug: purva
-title: Purva Sikri 
+title: Purva 
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
