--- a/content/blogs/Untitledblog.html
+++ b/content/blogs/Untitledblog.html
@@ -7,8 +7,8 @@ description: Growing up in a boarding school and being out of my comfort zone fo
 draft: false
 image: pic07.jpg
 keywords: ""
-slug: purva
-title: Purva Sikri
+slug: purva1
+title: Purva
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
