--- a/content/blogs/homework2.html
+++ b/content/blogs/homework2.html
@@ -191,7 +191,7 @@ ggplot(tidyweather, aes(x=date, y = delta))+  #Plotting delta by date
   NULL</code></pre>
 <p><img src="/blogs/homework2_files/figure-html/facet_wrap-1.png" width="648" style="display: block; margin: auto;" /></p>
 <blockquote>
-<p>AInference 1:</p>
+<p>Inference 1:</p>
 </blockquote>
 <p>Although all of the graphs in the grid have a similar upwards trend, there are subtle differences in variability between months such as December/January and June/July. January is a month with much higher variability in weather while June does not. This is something that may be worth looking into for meteorologists.</p>
 </div>
@@ -380,9 +380,9 @@ glimpse(approval_polllist)</code></pre>
        y=&#39;Average Approval Margin (Approve - Disapprove)&#39;) + #Y-label
   NULL
 
-ggsave(file=&#39;biden_plot.png&#39;, plot=plot, width=12, height=8) #Saving to adjust image width
-knitr::include_graphics(&quot;biden_plot.png&quot;, error=F)</code></pre>
-<p><img src="biden_plot.png" width="1800" style="display: block; margin: auto;" /></p>
+
+plot</code></pre>
+<p><img src="/blogs/homework2_files/figure-html/unnamed-chunk-3-1.png" width="648" style="display: block; margin: auto;" /></p>
 <blockquote>
 <p>Inference 4:</p>
 </blockquote>
@@ -444,9 +444,9 @@ plot &lt;- bike %&gt;%
   labs(title=&quot;Monthly changes in TfL bike rentals&quot;, subtitle=&quot;Change from monthly average shown in blue and calculated between 2016-2019&quot;, x=&quot;&quot;, y=&quot;Bike rentals&quot;) +
   NULL
 
-ggsave(file=&#39;bike1_plot.png&#39;, plot=plot, width=12, height=8) # Create and save the plot
-knitr::include_graphics(&quot;bike1_plot.png&quot;, error=F)</code></pre>
-<p><img src="bike1_plot.png" width="1800" style="display: block; margin: auto;" /></p>
+
+plot</code></pre>
+<p><img src="/blogs/homework2_files/figure-html/unnamed-chunk-4-1.png" width="648" style="display: block; margin: auto;" /></p>
 </div>
 <div id="percentage-changes-from-the-expected-level-of-weekly-rentals." class="section level3">
 <h3>Percentage changes from the expected level of weekly rentals.</h3>
@@ -482,9 +482,9 @@ plot &lt;- bike %&gt;%
   labs(title=&quot;Weekly changes in TfL bike rentals&quot;, subtitle=&quot;% change from weekly averages calculated between 2016-2019&quot;, x=&quot;week&quot;, y=&quot;&quot;) +
   NULL
 
-ggsave(file=&#39;bike2_plot.png&#39;, plot=plot, width=12, height=8) # Create and save the plot
-knitr::include_graphics(&quot;bike2_plot.png&quot;, error=F)</code></pre>
-<p><img src="bike2_plot.png" width="1800" style="display: block; margin: auto;" /></p>
+
+plot</code></pre>
+<p><img src="/blogs/homework2_files/figure-html/unnamed-chunk-5-1.png" width="648" style="display: block; margin: auto;" /></p>
 <p>In collaborate with: Lazar Jelic, Valeria Morales, Hanlu Lin, Hao Ni, and Junna Yanai</p>
 </div>
 </div>
