--- a/content/blogs/blog_6.html
+++ b/content/blogs/blog_6.html
@@ -14,3 +14,4 @@ title: Using target banking to find new saving account holders
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
+<p>Please find attached a PDF of the Python codes, their output, final model, and other results in the main blog menu (inside the block - target banking in India).</p>
