--- a/content/blogs/homework2.html
+++ b/content/blogs/homework2.html
@@ -15,29 +15,29 @@ title: Dplyr, tidyverse, ggplot, and t-test (using bootstrap).
 
 
 <p>After cleaning and performing an exploratory data analysis on multiple data sets, ggplot was used to visualise and gather information about the spread of the data. Inferences were made from various types of plots and numerical relations (e.g. correlation).</p>
-<div id="setting-up-the-markdown-file-to-auto-filter-the-data-and-plots" class="section level3">
-<h3>Setting up the markdown file to auto filter the data and plots</h3>
+<div id="setting-up-the-markdown-file-to-auto-filter-the-data-and-plots" class="section level4">
+<h4>Setting up the markdown file to auto filter the data and plots</h4>
 </div>
-<div id="loading-the-necessary-libraries" class="section level3">
-<h3>Loading the necessary libraries</h3>
+<div id="loading-the-necessary-libraries" class="section level4">
+<h4>Loading the necessary libraries</h4>
 </div>
 <div id="ananlysis-1-on-climate-change-and-temperature-anomalies" class="section level1">
 <h1>Ananlysis 1 on Climate change and temperature anomalies</h1>
-<div id="loading-the-data" class="section level3">
-<h3>Loading the data</h3>
+<div id="loading-the-data" class="section level4">
+<h4>Loading the data</h4>
 <pre class="r"><code>weather &lt;- 
   read_csv(&quot;https://data.giss.nasa.gov/gistemp/tabledata_v4/NH.Ts+dSST.csv&quot;, 
            skip = 1, 
            na = &quot;***&quot;)</code></pre>
 </div>
-<div id="tidying-the-data" class="section level3">
-<h3>Tidying the data</h3>
+<div id="tidying-the-data" class="section level4">
+<h4>Tidying the data</h4>
 <pre class="r"><code>tidyweather &lt;- weather %&gt;%
   select(1:13) %&gt;% #Selecting Year and month variables
   pivot_longer(cols=2:13, names_to=&#39;month&#39;, values_to=&#39;delta&#39;) #Tidying the data from wide to long format so that we have a column for the months and the corresponding temperature data respectively</code></pre>
 </div>
-<div id="checking-for-year-month-and-delta-columns-in-the-tidyweather-dataframe" class="section level3">
-<h3>Checking for year, month, and delta columns in the tidyweather dataframe</h3>
+<div id="checking-for-year-month-and-delta-columns-in-the-tidyweather-dataframe" class="section level4">
+<h4>Checking for year, month, and delta columns in the tidyweather dataframe</h4>
 <pre class="r"><code>skim(tidyweather)</code></pre>
 <table>
 <caption><span id="tab:unnamed-chunk-1">Table 1: </span>Data summary</caption>
@@ -154,8 +154,8 @@ title: Dplyr, tidyverse, ggplot, and t-test (using bootstrap).
 </tbody>
 </table>
 </div>
-<div id="plotting-information" class="section level3">
-<h3>Plotting Information</h3>
+<div id="plotting-information" class="section level4">
+<h4>Plotting Information</h4>
 <pre class="r"><code>#Creating date variables for the tidyweather dataset
 tidyweather &lt;- tidyweather %&gt;% 
   mutate(date = ymd(paste(as.character(Year), month, &quot;1&quot;)), #Creating a column called date 
@@ -175,8 +175,8 @@ ggplot(tidyweather, aes(x=date, y = delta))+  #Plotting delta by date
   NULL</code></pre>
 <p><img src="/blogs/homework2_files/figure-html/scatter_plot-1.png" width="648" style="display: block; margin: auto;" /></p>
 </div>
-<div id="scatterplot-for-each-month" class="section level3">
-<h3>Scatterplot for each month</h3>
+<div id="scatterplot-for-each-month" class="section level4">
+<h4>Scatterplot for each month</h4>
 <pre class="r"><code>tidyweather %&gt;%
   ggplot(aes(x=Year, y=delta)) + #Plotting delta by Year
   geom_point() + #Scatterplot
@@ -191,12 +191,12 @@ ggplot(tidyweather, aes(x=date, y = delta))+  #Plotting delta by date
   NULL</code></pre>
 <p><img src="/blogs/homework2_files/figure-html/facet_wrap-1.png" width="648" style="display: block; margin: auto;" /></p>
 <blockquote>
-<p>Inference 1:</p>
+<p>Inference 1:
+Although all of the graphs in the grid have a similar upwards trend, there are subtle differences in variability between months such as December/January and June/July. January is a month with much higher variability in weather while June does not. This is something that may be worth looking into for meteorologists.</p>
 </blockquote>
-<p>Although all of the graphs in the grid have a similar upwards trend, there are subtle differences in variability between months such as December/January and June/July. January is a month with much higher variability in weather while June does not. This is something that may be worth looking into for meteorologists.</p>
 </div>
-<div id="creating-an-interval-column-for-1881-1920-1921-1950-1951-1980-1981-2010" class="section level3">
-<h3>Creating an interval column for 1881-1920, 1921-1950, 1951-1980, 1981-2010</h3>
+<div id="creating-an-interval-column-for-1881-1920-1921-1950-1951-1980-1981-2010" class="section level4">
+<h4>Creating an interval column for 1881-1920, 1921-1950, 1951-1980, 1981-2010</h4>
 <pre class="r"><code>comparison &lt;- tidyweather %&gt;% #New data frame called comparison
   filter(Year&gt;= 1881) %&gt;%     #remove years prior to 1881
   #create new variable &#39;interval&#39;, and assign values based on criteria below:
@@ -208,8 +208,8 @@ ggplot(tidyweather, aes(x=date, y = delta))+  #Plotting delta by date
     TRUE ~ &quot;2011-present&quot;
   ))</code></pre>
 </div>
-<div id="density-plot-to-study-the-distribution-of-monthly-deviations-delta-grouped-by-intervals-we-are-interested-in" class="section level3">
-<h3>Density plot to study the distribution of monthly deviations (<code>delta</code>), grouped by intervals we are interested in</h3>
+<div id="density-plot-to-study-the-distribution-of-monthly-deviations-delta-grouped-by-intervals-we-are-interested-in" class="section level4">
+<h4>Density plot to study the distribution of monthly deviations (<code>delta</code>), grouped by intervals we are interested in</h4>
 <pre class="r"><code>ggplot(comparison, aes(x=delta, fill=interval)) +
   geom_density(alpha=0.2) +   #density plot with tranparency set to 20%
   theme_bw() +                #theme
@@ -219,8 +219,8 @@ ggplot(tidyweather, aes(x=date, y = delta))+  #Plotting delta by date
   )</code></pre>
 <p><img src="/blogs/homework2_files/figure-html/density_plot-1.png" width="648" style="display: block; margin: auto;" /></p>
 </div>
-<div id="average-annual-anomalies" class="section level3">
-<h3>Average annual anomalies</h3>
+<div id="average-annual-anomalies" class="section level4">
+<h4>Average annual anomalies</h4>
 <pre class="r"><code>average_annual_anomaly &lt;- tidyweather %&gt;%
   filter(!is.na(delta)) %&gt;% #Removing rows with NA&#39;s in the delta column 
   group_by(Year) %&gt;% 
@@ -238,12 +238,12 @@ ggplot(average_annual_anomaly, aes(x=Year, y=annual_average_delta))+
   NULL</code></pre>
 <p><img src="/blogs/homework2_files/figure-html/averaging-1.png" width="648" style="display: block; margin: auto;" /></p>
 <blockquote>
-<p>Inference 2:</p>
+<p>Inference 2:
+A one-degree global change is significant because it takes a vast amount of heat to warm all the oceans, atmosphere, and land by that much. In the past, a one- to two-degree drop was all it took to plunge the Earth into the Little Ice Age.</p>
 </blockquote>
-<p>A one-degree global change is significant because it takes a vast amount of heat to warm all the oceans, atmosphere, and land by that much. In the past, a one- to two-degree drop was all it took to plunge the Earth into the Little Ice Age.</p>
 </div>
-<div id="confidence-interval-for-the-average-annual-delta-since-2011" class="section level3">
-<h3>Confidence interval for the average annual delta since 2011</h3>
+<div id="confidence-interval-for-the-average-annual-delta-since-2011" class="section level4">
+<h4>Confidence interval for the average annual delta since 2011</h4>
 <pre class="r"><code>formula_ci &lt;- comparison %&gt;% 
   group_by(interval) %&gt;%
   # calculate mean, SD, count, SE, lower/upper 95% CI
@@ -264,8 +264,8 @@ formula_ci</code></pre>
 ##   &lt;chr&gt;        &lt;dbl&gt; &lt;dbl&gt; &lt;int&gt;  &lt;dbl&gt;      &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
 ## 1 2011-present  1.06 0.274   132 0.0239       1.98  1.01  1.11</code></pre>
 </div>
-<div id="bootstrap-simulation" class="section level3">
-<h3>Bootstrap Simulation</h3>
+<div id="bootstrap-simulation" class="section level4">
+<h4>Bootstrap Simulation</h4>
 <pre class="r"><code>boot_ci &lt;- comparison %&gt;%
   group_by(interval) %&gt;%
   filter(interval == &#39;2011-present&#39;) %&gt;%
@@ -280,9 +280,9 @@ boot_ci</code></pre>
 ##      &lt;dbl&gt;    &lt;dbl&gt;
 ## 1     1.01     1.11</code></pre>
 <blockquote>
-<p>Inference 3:</p>
+<p>Inference 3:
+We construct a 95% confidence interval both using the formula and a bootstrap simulation. The result shows that the true mean lies within the interval calculated with 95% confidence. The fact that this confidence interval does not contain zero shows that the difference between the means is statistically significant. Hence, using our result, we can conclude that the increase in temprature is statistically significant and that global warming is progressing.</p>
 </blockquote>
-<p>We construct a 95% confidence interval both using the formula and a bootstrap simulation. The result shows that the true mean lies within the interval calculated with 95% confidence. The fact that this confidence interval does not contain zero shows that the difference between the means is statistically significant. Hence, using our result, we can conclude that the increase in temprature is statistically significant and that global warming is progressing.</p>
 </div>
 </div>
 <div id="analysis-2-on-bidens-approval-margins" class="section level1">
@@ -348,8 +348,8 @@ glimpse(approval_polllist)</code></pre>
 ## $ question_id         &lt;dbl&gt; 139593, 139642, 139733, 139654, 139734, 139652, 13…
 ## $ createddate         &lt;date&gt; 2021-02-03, 2021-02-04, 2021-02-11, 2021-02-05, 2…
 ## $ timestamp           &lt;chr&gt; &quot;13:01:54 17 Sep 2021&quot;, &quot;13:01:54 17 Sep 2021&quot;, &quot;1…</code></pre>
-<div id="biden-approval-margin-graph" class="section level3">
-<h3>Biden Approval Margin graph</h3>
+<div id="biden-approval-margin-graph" class="section level4">
+<h4>Biden Approval Margin graph</h4>
 <pre class="r"><code>plot &lt;- approval_polllist %&gt;%
   mutate(week=week(enddate)) %&gt;% #Creating a new column called week by extracting the week from the enddate variable
   group_by(week) %&gt;%
@@ -384,15 +384,15 @@ glimpse(approval_polllist)</code></pre>
 plot</code></pre>
 <p><img src="/blogs/homework2_files/figure-html/unnamed-chunk-3-1.png" width="648" style="display: block; margin: auto;" /></p>
 <blockquote>
-<p>Inference 4:</p>
+<p>Inference 4:
+The confidence interval for ‘week 4’ ranges from 9.14 to 19.6828 with a mean of 14.41 and standard deviation of 10.25, while ‘week 25’ ranges from 10.30 to 12.7523 with a mean of 11.53 and a standard deviation of 4.74. This is mainly due to the number of data points. For ‘week 4’ we only have 17 data points to work with, while ‘week 25’ has 60. With a larger set of data to work with, we are able to create narrower intervals with the same level of confidence.</p>
 </blockquote>
-<p>The confidence interval for ‘week 4’ ranges from 9.14 to 19.6828 with a mean of 14.41 and standard deviation of 10.25, while ‘week 25’ ranges from 10.30 to 12.7523 with a mean of 11.53 and a standard deviation of 4.74. This is mainly due to the number of data points. For ‘week 4’ we only have 17 data points to work with, while ‘week 25’ has 60. With a larger set of data to work with, we are able to create narrower intervals with the same level of confidence.</p>
 </div>
 </div>
 <div id="analysis-3-on-excess-rentals-in-tfl-bike-sharing" class="section level1">
 <h1>Analysis 3 on Excess rentals in TfL bike sharing</h1>
-<div id="loading-and-cleaning-the-latest-tfl-data" class="section level3">
-<h3>Loading and cleaning the latest Tfl data</h3>
+<div id="loading-and-cleaning-the-latest-tfl-data" class="section level4">
+<h4>Loading and cleaning the latest Tfl data</h4>
 <pre class="r"><code>setwd(&#39;/Users/purvasikri/Desktop/my_website/data&#39;)
 url &lt;- &quot;https://data.london.gov.uk/download/number-bicycle-hires/ac29363e-e0cb-47cc-a97a-e216d900a6b0/tfl-daily-cycle-hires.xlsx&quot;
 
@@ -417,8 +417,8 @@ bike &lt;- bike0 %&gt;%
           month = lubridate::month(day, label = TRUE),
           week = isoweek(day))</code></pre>
 </div>
-<div id="graphs" class="section level3">
-<h3>Graphs</h3>
+<div id="graphs" class="section level4">
+<h4>Graphs</h4>
 <pre class="r"><code># Clean the data 
 bike_exp &lt;- bike %&gt;%
   filter(year &gt; 2015) %&gt;% #Filter all the data that after 2015
@@ -448,8 +448,8 @@ plot &lt;- bike %&gt;%
 plot</code></pre>
 <p><img src="/blogs/homework2_files/figure-html/unnamed-chunk-4-1.png" width="648" style="display: block; margin: auto;" /></p>
 </div>
-<div id="percentage-changes-from-the-expected-level-of-weekly-rentals." class="section level3">
-<h3>Percentage changes from the expected level of weekly rentals.</h3>
+<div id="percentage-changes-from-the-expected-level-of-weekly-rentals." class="section level4">
+<h4>Percentage changes from the expected level of weekly rentals.</h4>
 <pre class="r"><code># Clean the data
 bike_exp_week &lt;- bike %&gt;%
   filter(year &gt; 2015) %&gt;%
