--- a/content/blogs/homework2.html
+++ b/content/blogs/homework2.html
@@ -15,8 +15,8 @@ title: Dplyr, tidyverse, ggplot, and t-test (using bootstrap).
 
 
 <p>After cleaning and performing an exploratory data analysis on multiple data sets, ggplot was used to visualise and gather information about the spread of the data. Inferences were made from various types of plots and numerical relations (e.g. correlation).</p>
-<div id="setting-up-the-markdown-file-to-auto-filter-the-data-and-plots" class="section level4">
-<h4>Setting up the markdown file to auto filter the data and plots</h4>
+<div id="setting-up-the-file-to-auto-filter-the-data-and-plots" class="section level4">
+<h4>Setting up the file to auto filter the data and plots</h4>
 </div>
 <div id="loading-the-necessary-libraries" class="section level4">
 <h4>Loading the necessary libraries</h4>
