--- a/content/blogs/Untitledblog.html
+++ b/content/blogs/Untitledblog.html
@@ -36,7 +36,15 @@ title: About me
 <pre><code>1. Graduate research scholarship for best research work.
 2. Dean&#39;s List for 3 consecutive years.
 3. Best overall performer.</code></pre>
-<p>Further Information can be found on my <a href="https://www.linkedin.com/in/purvasikriconsulting/">LinkedIn</a></p>
+</div>
+<div id="hobbies" class="section level3">
+<h3>Hobbies</h3>
+<pre><code>1. Athletics (Punjab state champion in 2020).
+2. Jewelery designing </code></pre>
+<p>Few of my designs are:
+<img src="/img/blogs/Capture.png" width="100%" /></p>
+<p><img src="/img/blogs/Capture.png" width="100%" />
+Further Information can be found on my <a href="https://www.linkedin.com/in/purvasikriconsulting/">LinkedIn</a></p>
 </div>
 <div id="importance-of-analytics-in-my-life" class="section level3">
 <h3>Importance of analytics in my life</h3>
