--- a/content/blogs/Untitledblog.html
+++ b/content/blogs/Untitledblog.html
@@ -40,11 +40,12 @@ title: About me
 <div id="hobbies" class="section level3">
 <h3>Hobbies</h3>
 <pre><code>1. Athletics (Punjab state champion in 2020).
-2. Jewelery designing </code></pre>
-<p>Few of my designs are:
-<img src="/img/blogs/Capture.png" width="100%" /></p>
-<p><img src="/img/blogs/Capture.png" width="100%" />
-Further Information can be found on my <a href="https://www.linkedin.com/in/purvasikriconsulting/">LinkedIn</a></p>
+2. Swimming (Represented my city in state competitions).
+3. Bridal jewelery designing</code></pre>
+<p><strong>Few of my bridal designs are:</strong></p>
+<p><img src="/img/blogs/jd1.jpg" width="50%" /></p>
+<p><img src="/img/blogs/jd2.jpg" width="50%" /></p>
+<p>Further Information can be found on my <a href="https://www.linkedin.com/in/purvasikriconsulting/">LinkedIn</a></p>
 </div>
 <div id="importance-of-analytics-in-my-life" class="section level3">
 <h3>Importance of analytics in my life</h3>
